@@ -1,6 +1,6 @@
 package presentation.screens.mainMenu
 
-import Screen
+import navigation.Screen
 import androidx.compose.foundation.layout.Box
 import androidx.compose.foundation.layout.Column
 import androidx.compose.foundation.layout.fillMaxSize
